Trigger perf pipeline on a schedule
- Default setting to 24h, but will be changed in the future

Authored-by: Francisco Guerrero <aguerrero@pivotal.io>

--- a/concourse/perf-settings.yml
+++ b/concourse/perf-settings.yml
@@ -1,5 +1,6 @@
 tf-bucket-path: clusters-google/
 tf-cloud-provider: google
+folder-prefix: perf
 
 enable-impersonation-multinode: true
 pxf-jvm-opts: "-Xmx512m -Xms512m"
@@ -12,3 +13,7 @@ perf-gpdb-instance-type: n1-standard-4
 perf-hadoop-number-of-nodes: 3
 perf-hadoop-initialization-script: gs://pxf-perf/scripts/load-lineitem-dataset.sh
 perf-hadoop-instance-type: n1-standard-4
+
+perf-trigger-interval: 24h
+perf-trigger-start: 12:30 PM
+perf-trigger-stop: 12:40 PM
