Added PXF license and notice file in the repo head (#10)
* Added PXF license and notice file in the repo head

* Updated and consolidated LICENSE and NOTICE files to top level

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -90,12 +90,16 @@ subprojects { subProject ->
             "-Xlint:fallthrough", "-Xlint:deprecation", "-Xlint:unchecked", "-Xlint:-options"
     ]
 
-    // Add LICENSE, DISCLAIMER and NOTICE to generated jar files.
+    // Add LICENSE and NOTICE to generated jar files.
     sourceSets {
         main {
             resources {
-                srcDir '../resources'
-                include '**/*'
+                srcDir '../../'
+                include 'NOTICE'
+            }
+            resources {
+                srcDir '../../'
+                include 'LICENSE'
             }
         }
     }
@@ -307,18 +311,6 @@ project('pxf') {
         link('/etc/pxf', "/etc/pxf-${project.version}")
         link('/opt/pxf', "/opt/pxf-${project.version}")
         link('/etc/init.d/pxf-service', "/opt/pxf/pxf-service")
-
-        from('../resources/META-INF/DISCLAIMER') {
-            into "/opt/pxf-${project.version}"
-        }
-
-        from('../resources/META-INF/LICENSE') {
-            into "/opt/pxf-${project.version}"
-        }
-
-        from('../resources/META-INF/NOTICE') {
-            into "/opt/pxf-${project.version}"
-        }
     }
 }
 
