Updated Ubuntu docker image definition and pipeline job
Co-authored-by: Lav Jain <ljain@pivotal.io>
Co-authored-by: Alex Denissov <adenissov@pivotal.io>

--- a/concourse/docker-images.yml
+++ b/concourse/docker-images.yml
@@ -397,7 +397,7 @@ jobs:
         build: .
         dockerfile: pxf_src/concourse/docker/pxf-dev-base/Dockerfile
         build_args:
-          BASE_IMAGE: "pivotaldata/ubuntu-gpdb-dev:16.04_gcc_6_3"
+          BASE_IMAGE: "ubuntu-gpdb-dev:16.04_gcc_6_3"
 
   - name: docker-gpdb-pxf-dev-centos6-cdh-client
     plan:
