--- a/concourse/docker/ubuntu16-pxf-server/Dockerfile
+++ b/concourse/docker/ubuntu16-pxf-server/Dockerfile
@@ -15,5 +15,7 @@ RUN mkdir -p /etc/hadoop/conf && \
     cp /singlecluster/hadoop/etc/hadoop/hdfs-site.xml /etc/hadoop/conf && \
     cp /singlecluster/hadoop/etc/hadoop/mapred-site.xml /etc/hadoop/conf && \
     cp /singlecluster/hadoop/etc/hadoop/yarn-site.xml /etc/hadoop/conf && \
+    mkdir -p /etc/hive/conf && \
     cp /singlecluster/hive/conf/hive-site.xml /etc/hive/conf && \
+    mkdir -p /etc/hbase/conf && \
     cp /singlecluster/hbase/conf/hbase-site.xml /etc/hbase/conf
