--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -5,9 +5,9 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #   http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -17,8 +17,7 @@
 
 version=4.0.0
 license=ASL 2.0
-vendor=Greenplum
-hadoopVersion=2.7.1
+hadoopVersion=2.7.3
 hiveVersion=1.2.1
 hbaseVersionJar=1.1.2
 hbaseVersionRPM=1.1.2
@@ -26,5 +25,6 @@ tomcatVersion=7.0.62
 pxfProtocolVersion=v15
 osFamily=el6
 parquetVersion=1.9.0
+awsJavaSdk=1.11.416
 org.gradle.daemon=true
 org.gradle.parallel=true
