--- a/server/build.gradle
+++ b/server/build.gradle
@@ -140,20 +140,27 @@ subprojects { subProject ->
 
 project('pxf') {
     jar.enabled = false
-    dependencies {
-        bundleJars "com.fasterxml.jackson.core:jackson-core:2.6.7"
-        bundleJars "com.fasterxml.jackson.core:jackson-databind:2.6.7.1"
-        bundleJars "com.fasterxml.jackson.core:jackson-annotations:2.6.0"
-        bundleJars "org.apache.httpcomponents:httpclient:4.5.2"
-        bundleJars "org.apache.httpcomponents:httpcore:4.4.4"
-        bundleJars "org.apache.hadoop:hadoop-aws:2.8.5"
-        bundleJars "com.amazonaws:aws-java-sdk-core:$awsJavaSdk"
-        bundleJars "com.amazonaws:aws-java-sdk-kms:$awsJavaSdk"
-        bundleJars "com.amazonaws:aws-java-sdk-s3:$awsJavaSdk"
-        bundleJars "org.apache.hadoop:hadoop-azure-datalake:3.0.0-alpha2"
-        bundleJars "com.microsoft.azure:azure-data-lake-store-sdk:2.0.11"
-        bundleJars "com.google.cloud.bigdataoss:gcs-connector:hadoop2-1.9.7"
-    }
+//    dependencies {
+//        // AWS S3 support jars
+////        bundleJars "com.fasterxml.jackson.core:jackson-core:2.6.7"
+////        bundleJars "com.fasterxml.jackson.core:jackson-databind:2.6.7.1"
+////        bundleJars "com.fasterxml.jackson.core:jackson-annotations:2.6.0"
+////        bundleJars "org.apache.httpcomponents:httpclient:4.5.2"
+////        bundleJars "org.apache.httpcomponents:httpcore:4.4.4"
+////        bundleJars "org.apache.hadoop:hadoop-aws:2.8.5"
+////        bundleJars "com.amazonaws:aws-java-sdk-core:$awsJavaSdk"
+////        bundleJars "com.amazonaws:aws-java-sdk-kms:$awsJavaSdk"
+////        bundleJars "com.amazonaws:aws-java-sdk-s3:$awsJavaSdk"
+//        // Azure Datalake jars
+////        bundleJars "org.apache.hadoop:hadoop-azure-datalake:3.0.0-alpha2"
+////        bundleJars "com.microsoft.azure:azure-data-lake-store-sdk:2.0.11"
+//        // GCS jars and dependencies
+////        bundleJars "com.google.cloud.bigdataoss:gcs-connector:hadoop2-1.9.7"
+////        bundleJars "com.google.cloud.bigdataoss:gcsio:1.9.7"
+////        bundleJars "com.google.flogger:flogger:0.3.1"
+////        bundleJars "com.google.flogger:flogger-system-backend:0.3.1"
+////        bundleJars "com.google.flogger:google-extensions:0.3.1"
+//    }
 }
 
 project('pxf-api') {
