--- a/concourse/docker/centos6-pxf/Dockerfile
+++ b/concourse/docker/centos6-pxf/Dockerfile
@@ -1,7 +1,15 @@
 ARG BASE_IMAGE
 
+FROM pivotaldata/${BASE_IMAGE} as scratch
+
+RUN cd pxf_src/server && make tar
+
+RUN PWD=$(pwd) && cd pxf_src/automation && PXF_HOME=${PWD}/pxf_src/server/build/stage make dev
+
 FROM pivotaldata/${BASE_IMAGE}
 
-ADD pxf_maven_dependencies/pxf_maven_dependencies.tar.gz /home/gpadmin/.m2
+RUN mkdir -p /home/gpadmin
 
-ADD pxf_gradle_dependencies/pxf_gradle_dependencies.tar.gz /root/.gradle
+COPY --from=scratch /home/gpadmin/.m2 /root/.m2
+
+COPY --from=scratch /root/.gradle /root/.gradle
