--- a/concourse/pxf_pipeline.yml
+++ b/concourse/pxf_pipeline.yml
@@ -48,7 +48,7 @@ resources:
 - name: pxf_build_number
   type: semver
   source:
-    initial_version: 3.3.0
+    initial_version: 4.0.0
     bucket: {{pxf-aws-bucket-name}}
     key: pxf_artifacts/pxf_build_number
     region_name: {{aws-region}}
@@ -148,6 +148,32 @@ jobs:
     params:
       file: pxf_artifacts/pxf.tar.gz
 
+- name: test_pxf_cdh
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed:
+      - compile_pxf
+    - get: bin_gpdb
+      resource: bin_gpdb_centos6
+    - get: pxf_src
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: pxf_tarball
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: gpdb-pxf-dev-centos6-cdh-server
+  - task: test_pxf
+    file: pxf_src/concourse/tasks/test_pxf.yml
+    image: gpdb-pxf-dev-centos6-cdh-server
+    attempts: 2
+    params:
+      GROUP: gpdb,proxy,profile
+      TEST_ENV: {{test-env}}
+      HADOOP_CLIENT: CDH
+
 - name: test_pxf_hdp
   plan:
   - aggregate:
@@ -169,7 +195,7 @@ jobs:
     file: pxf_src/concourse/tasks/test_pxf.yml
     image: gpdb-pxf-dev-centos6-hdp-server
     params:
-      GROUP: gpdb,proxy
+      GROUP: gpdb,proxy,profile
       TEST_ENV: {{test-env}}
       HADOOP_CLIENT: HDP
       TARGET_OS: centos
@@ -202,7 +228,7 @@ jobs:
       TEST_ENV: {{test-env}}
 
 - name: test_pxf_hdp_multinode_gpdb
-  max_in_flight: 1
+  max_in_flight: 2
   plan:
   - get: ccp_src
   - get: gpdb_src
@@ -220,7 +246,6 @@ jobs:
     trigger: true
   - get: ccp-7
   - get: gpdb-pxf-dev-centos6-hdp-server
-
   - put: terraform_gpdb
     resource: terraform
     params:
@@ -265,33 +290,8 @@ jobs:
     image: gpdb-pxf-dev-centos6-hdp-server
     file: pxf_src/concourse/tasks/test_pxf_multinode.yml
     params:
-      NO_OF_FILES: {{no_of_files}}
-
-- name: test_pxf_cdh
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed:
-      - compile_pxf
-    - get: bin_gpdb
-      resource: bin_gpdb_centos6
-    - get: pxf_src
-      passed:
-      - compile_pxf
-      trigger: true
-    - get: pxf_tarball
-      passed:
-      - compile_pxf
-      trigger: true
-    - get: gpdb-pxf-dev-centos6-cdh-server
-  - task: test_pxf
-    file: pxf_src/concourse/tasks/test_pxf.yml
-    image: gpdb-pxf-dev-centos6-cdh-server
-    attempts: 2
-    params:
       GROUP: gpdb,proxy
-      TEST_ENV: {{test-env}}
-      HADOOP_CLIENT: CDH
+      NO_OF_FILES: {{no_of_files}}
 
 - name: test_pxf_no_impersonation
   plan:
