Upgrade libraries to Hadoop 2.8.5
- Add missing dependencies for hadoop 2.8.5

--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -17,7 +17,8 @@
 
 version=4.0.0
 license=ASL 2.0
-hadoopVersion=2.7.3
+hadoopVersion=2.8.5
+htraceVersion=4.0.1-incubating
 hiveVersion=1.2.1
 hbaseVersionJar=1.1.2
 hbaseVersionRPM=1.1.2
