--- a/server/build.gradle
+++ b/server/build.gradle
@@ -140,17 +140,17 @@ subprojects { subProject ->
 
 project('pxf') {
     jar.enabled = false
-//    dependencies {
-//        // AWS S3 support jars
-////        bundleJars "com.fasterxml.jackson.core:jackson-core:2.6.7"
-////        bundleJars "com.fasterxml.jackson.core:jackson-databind:2.6.7.1"
-////        bundleJars "com.fasterxml.jackson.core:jackson-annotations:2.6.0"
-////        bundleJars "org.apache.httpcomponents:httpclient:4.5.2"
-////        bundleJars "org.apache.httpcomponents:httpcore:4.4.4"
-////        bundleJars "org.apache.hadoop:hadoop-aws:2.8.5"
-////        bundleJars "com.amazonaws:aws-java-sdk-core:$awsJavaSdk"
-////        bundleJars "com.amazonaws:aws-java-sdk-kms:$awsJavaSdk"
-////        bundleJars "com.amazonaws:aws-java-sdk-s3:$awsJavaSdk"
+    dependencies {
+        // AWS S3 support jars
+        bundleJars "com.fasterxml.jackson.core:jackson-core:2.6.7"
+        bundleJars "com.fasterxml.jackson.core:jackson-databind:2.6.7.1"
+        bundleJars "com.fasterxml.jackson.core:jackson-annotations:2.6.0"
+        bundleJars "org.apache.httpcomponents:httpclient:4.5.2"
+        bundleJars "org.apache.httpcomponents:httpcore:4.4.4"
+        bundleJars "org.apache.hadoop:hadoop-aws:2.8.5"
+        bundleJars "com.amazonaws:aws-java-sdk-core:$awsJavaSdk"
+        bundleJars "com.amazonaws:aws-java-sdk-kms:$awsJavaSdk"
+        bundleJars "com.amazonaws:aws-java-sdk-s3:$awsJavaSdk"
 //        // Azure Datalake jars
 ////        bundleJars "org.apache.hadoop:hadoop-azure-datalake:3.0.0-alpha2"
 ////        bundleJars "com.microsoft.azure:azure-data-lake-store-sdk:2.0.11"
@@ -160,7 +160,7 @@ project('pxf') {
 ////        bundleJars "com.google.flogger:flogger:0.3.1"
 ////        bundleJars "com.google.flogger:flogger-system-backend:0.3.1"
 ////        bundleJars "com.google.flogger:google-extensions:0.3.1"
-//    }
+    }
 }
 
 project('pxf-api') {
@@ -199,8 +199,11 @@ project('pxf-service') {
     dependencies {
         providedCompile(project(':pxf-api'))
         providedCompile "org.apache.hadoop:hadoop-common:$hadoopVersion"
+        providedCompile "org.apache.htrace:htrace-core4:$htraceVersion"
         providedCompile "org.apache.hadoop:hadoop-hdfs:$hadoopVersion"
+        providedCompile "org.apache.hadoop:hadoop-hdfs-client:$hadoopVersion"
         providedCompile "org.apache.tomcat:tomcat-catalina:$tomcatVersion"
+
 
         bundleJars "org.apache.hadoop:hadoop-auth:$hadoopVersion"
         bundleJars "commons-cli:commons-cli:1.2"
@@ -221,7 +224,10 @@ project('pxf-hdfs') {
         compile "org.apache.avro:avro-mapred:1.7.4"
         compile "org.apache.hadoop:hadoop-mapreduce-client-core:$hadoopVersion"
         compile "org.apache.hadoop:hadoop-common:$hadoopVersion"
+        compile "org.apache.htrace:htrace-core4:$htraceVersion"
+
         compile "org.apache.hadoop:hadoop-hdfs:$hadoopVersion"
+        compile "org.apache.hadoop:hadoop-hdfs-client:$hadoopVersion"
         compile "org.apache.parquet:parquet-hadoop-bundle:$parquetVersion"
 
         bundleJars "org.apache.avro:avro:1.7.4"
