Add hadoop-yarn-api dependency for Kerberos

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -223,6 +223,7 @@ project('pxf-hdfs') {
         compile(project(':pxf-api'))
         compile "org.apache.avro:avro-mapred:1.7.4"
         compile "org.apache.hadoop:hadoop-mapreduce-client-core:$hadoopVersion"
+        compile "org.apache.hadoop:hadoop-yarn-api:$hadoopVersion" // Kerberos dependency
         compile "org.apache.hadoop:hadoop-common:$hadoopVersion"
         compile "org.apache.htrace:htrace-core4:$htraceVersion"
 
