Remove unused hadoop client from docker image

--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -2,14 +2,16 @@ ARG BASE_IMAGE
 
 FROM pivotaldata/${BASE_IMAGE} as scratch
 
-RUN cd pxf_src/server && make tar
+ADD pxf_src pxf_src
 
-RUN PWD=$(pwd) && cd pxf_src/automation && PXF_HOME=${PWD}/pxf_src/server/build/stage make dev
+RUN pushd pxf_src/server && make tar && popd
+
+RUN CWD=$(pwd) && pushd pxf_src/automation && PXF_HOME=${CWD}/pxf_src/server/build/stage make dev && popd
 
 FROM pivotaldata/${BASE_IMAGE}
 
-RUN mkdir -p /home/gpadmin
+RUN mkdir -p /home/gpadmin/.m2 /home/gpadmin/.gradle
 
-COPY --from=scratch /home/gpadmin/.m2 /root/.m2
+COPY --from=scratch /root/.m2 /home/gpadmin/.m2
 
-COPY --from=scratch /root/.gradle /root/.gradle
+COPY --from=scratch /root/.gradle /home/gpadmin/.gradle
