Revert "Update dockerfile to support ubuntu"
This reverts commit 2e434f1c6c4ec6c2f7a3e57ad3c1ce005ba8732f.

--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -4,9 +4,9 @@ FROM pivotaldata/${BASE_IMAGE} as scratch
 
 ADD pxf_src pxf_src
 
-RUN cd pxf_src/server && make tar
+RUN pushd pxf_src/server && make tar && popd
 
-RUN CWD=$(pwd) && cd pxf_src/automation && PXF_HOME=${CWD}/pxf_src/server/build/stage make dev
+RUN CWD=$(pwd) && pushd pxf_src/automation && PXF_HOME=${CWD}/pxf_src/server/build/stage make dev && popd
 
 FROM pivotaldata/${BASE_IMAGE}
 
