--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -4,14 +4,18 @@ FROM pivotaldata/${BASE_IMAGE} as scratch
 
 ADD pxf_src pxf_src
 
-RUN pushd pxf_src/server && make tar && popd
+RUN cd pxf_src/server && make tar && chown -R 1000:1000 /root/.gradle
 
-RUN CWD=$(pwd) && pushd pxf_src/automation && PXF_HOME=${CWD}/pxf_src/server/build/stage make dev && popd
+RUN CWD=$(pwd) && cd pxf_src/automation && \
+    PXF_HOME=${CWD}/pxf_src/server/build/stage make dev && \
+    chown -R 1000:1000 /root/.m2
 
 FROM pivotaldata/${BASE_IMAGE}
 
-RUN mkdir -p /home/gpadmin/.m2 /home/gpadmin/.gradle
+COPY --from=scratch /root/.m2 /root/.m2
 
-COPY --from=scratch /root/.m2 /home/gpadmin/.m2
+COPY --from=scratch /root/.gradle /root/.gradle
 
-COPY --from=scratch /root/.gradle /home/gpadmin/.gradle
+RUN mkdir -p /home/gpadmin && \
+    ln -s /root/.m2 /home/gpadmin/.m2 && \
+    ln -s /root/.gradle /home/gpadmin/.gradle
