PXF is a public repo and it doesn't need a deploy key to access the repo
- Only PR pipeline requires a key
- Updated README.md

--- a/concourse/default.yml
+++ b/concourse/default.yml
@@ -3,5 +3,5 @@
 gpdb-git-remote: https://github.com/greenplum-db/gpdb.git
 gpdb-git-branch: master
 
-pxf-git-remote: git@github.com:/greenplum-db/pxf.git
+pxf-git-remote: https://github.com/greenplum-db/pxf.git
 pxf-git-branch: master
