Turn of parallel gradle download

--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -28,4 +28,4 @@ osFamily=el6
 parquetVersion=1.9.0
 awsJavaSdk=1.11.416
 org.gradle.daemon=true
-org.gradle.parallel=true
+#org.gradle.parallel=true
