Use mavenCentral for the server gradle repository
Co-authored-by: Lav Jain <ljain@pivotal.io>
Co-authored-by: Francisco Guerrero <aguerrero@pivotal.io>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,10 +32,7 @@ plugins {
 }
 
 repositories {
-    // mavenCentral without https:
-    maven {
-        url 'http://repo1.maven.org/maven2'
-    }
+    mavenCentral()
     mavenLocal()
     jcenter {
         url 'http://jcenter.bintray.com/'
