Fix base docker image for PXF

--- a/concourse/docker/pxf-dev-base/Dockerfile
+++ b/concourse/docker/pxf-dev-base/Dockerfile
@@ -1,21 +1,14 @@
-ARG BASE_IMAGE
-
-FROM pivotaldata/${BASE_IMAGE} as scratch
-
-ADD pxf_src pxf_src
-
-RUN cd pxf_src/server && make tar && chown -R 1000:1000 /root/.gradle
-
-RUN CWD=$(pwd) && cd pxf_src/automation && \
-    PXF_HOME=${CWD}/pxf_src/server/build/stage make dev && \
-    chown -R 1000:1000 /root/.m2
+ARG BASE_IMAGE=gpdb-dev:centos6
 
 FROM pivotaldata/${BASE_IMAGE}
 
-COPY --from=scratch /root/.m2 /root/.m2
+ADD pxf_src /tmp/pxf_src
 
-COPY --from=scratch /root/.gradle /root/.gradle
-
-RUN mkdir -p /home/gpadmin && \
-    ln -s /root/.m2 /home/gpadmin/.m2 && \
-    ln -s /root/.gradle /home/gpadmin/.gradle
+RUN cd /tmp/pxf_src/server && make tar && \
+    CWD=$(pwd) && cd /tmp/pxf_src/automation && \
+    PXF_HOME=/tmp/pxf_src/server/build/stage make dev && \
+    mkdir -p /home/gpadmin && \
+    mv /root/.m2 /home/gpadmin && \
+    chown -R 1000:1000 /home/gpadmin/.m2 && \
+    ln -s /root/.gradle /home/gpadmin/.gradle && \
+    rm -rf /tmp/pxf_src
