Update pxf-pipeline and scripts to support ubuntu (#21)
Co-authored-by: Lav Jain <ljain@pivotal.io>
Co-authored-by: Alex Denissov <adenissov@pivotal.io>

--- a/concourse/pxf_pipeline.yml
+++ b/concourse/pxf_pipeline.yml
@@ -66,6 +66,12 @@ resources:
     repository: pivotaldata/gpdb-pxf-dev
     tag: centos6-hdp-server
 
+- name: gpdb-pxf-dev-ubuntu16-hdp-server
+  type: docker-image
+  source:
+    repository: pivotaldata/gpdb-pxf-dev
+    tag: ubuntu16-hdp-server
+
 - name: gpdb-pxf-dev-centos6-hdp-secure
   type: docker-image
   source:
@@ -86,6 +92,16 @@ resources:
     region_name: {{aws-region}}
     secret_access_key: {{bucket-secret-access-key}}
     versioned_file: bin_gpdb_centos6/gpdb_branch_((gpdb-branch))/icw_green/bin_gpdb.tar.gz
+
+- name: bin_gpdb_ubuntu16
+  type: s3
+  source:
+    access_key_id: {{bucket-access-key-id}}
+    # use the most recent compiled bits, for now, before updating icw_green
+    bucket: {{icw_green_bucket}}
+    region_name: {{aws-region}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: compiled_bits_ubuntu16/compiled_bits_ubuntu16.tar.gz
 
 - name: pxf_tarball
   type: s3
@@ -141,33 +157,7 @@ jobs:
     params:
       file: pxf_artifacts/pxf.tar.gz
 
-- name: test_pxf_cdh
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed:
-      - compile_pxf
-    - get: bin_gpdb
-      resource: bin_gpdb_centos6
-    - get: pxf_src
-      passed:
-      - compile_pxf
-      trigger: true
-    - get: pxf_tarball
-      passed:
-      - compile_pxf
-      trigger: true
-    - get: gpdb-pxf-dev-centos6-cdh-server
-  - task: test_pxf
-    file: pxf_src/concourse/tasks/test_pxf.yml
-    image: gpdb-pxf-dev-centos6-cdh-server
-    attempts: 2
-    params:
-      GROUP: gpdb,proxy,profile
-      TEST_ENV: {{test-env}}
-      HADOOP_CLIENT: CDH
-
-- name: test_pxf_hdp
+- name: test_pxf_hdp_centos6
   plan:
   - aggregate:
     - get: gpdb_src
@@ -188,11 +178,40 @@ jobs:
     file: pxf_src/concourse/tasks/test_pxf.yml
     image: gpdb-pxf-dev-centos6-hdp-server
     params:
-      GROUP: gpdb,proxy,profile
+      GROUP: gpdb,proxy
       TEST_ENV: {{test-env}}
       HADOOP_CLIENT: HDP
+      TEST_OS: centos
       TARGET_OS: centos
       TARGET_OS_VERSION: 6
+
+- name: test_pxf_hdp_ubuntu16
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed:
+      - compile_pxf
+    - get: bin_gpdb
+      resource: bin_gpdb_ubuntu16
+    - get: pxf_src
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: pxf_tarball
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: gpdb-pxf-dev-ubuntu16-hdp-server
+  - task: test_pxf
+    file: pxf_src/concourse/tasks/test_pxf.yml
+    image: gpdb-pxf-dev-ubuntu16-hdp-server
+    params:
+      GROUP: gpdb,proxy
+      TEST_ENV: {{test-env}}
+      HADOOP_CLIENT: HDP
+      TEST_OS: ubuntu
+      TARGET_OS: ubuntu
+      TARGET_OS_VERSION: 16
 
 - name: test_pxf_hdp_secure
   plan:
@@ -221,7 +240,7 @@ jobs:
       TEST_ENV: {{test-env}}
 
 - name: test_pxf_hdp_multinode_gpdb
-  max_in_flight: 2
+  max_in_flight: 1
   plan:
   - get: ccp_src
   - get: gpdb_src
@@ -283,8 +302,33 @@ jobs:
     image: gpdb-pxf-dev-centos6-hdp-server
     file: pxf_src/concourse/tasks/test_pxf_multinode.yml
     params:
-      GROUP: gpdb,proxy
       NO_OF_FILES: {{no_of_files}}
+
+- name: test_pxf_cdh
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed:
+      - compile_pxf
+    - get: bin_gpdb
+      resource: bin_gpdb_centos6
+    - get: pxf_src
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: pxf_tarball
+      passed:
+      - compile_pxf
+      trigger: true
+    - get: gpdb-pxf-dev-centos6-cdh-server
+  - task: test_pxf
+    file: pxf_src/concourse/tasks/test_pxf.yml
+    image: gpdb-pxf-dev-centos6-cdh-server
+    attempts: 2
+    params:
+      GROUP: gpdb,proxy
+      TEST_ENV: {{test-env}}
+      HADOOP_CLIENT: CDH
 
 - name: test_pxf_no_impersonation
   plan:
@@ -309,12 +353,14 @@ jobs:
     params:
       IMPERSONATION: false
       TEST_ENV: {{test-env}}
+      TEST_OS: centos
+      TARGET_OS: centos
 
 - name: promote_pxf_artifact
   plan:
   - get: pxf_tarball
     passed:
-    - test_pxf_hdp
+    - test_pxf_hdp_centos6
     - test_pxf_cdh
     - test_pxf_hdp_secure
     - test_pxf_no_impersonation
